# RAG-Assistant-with-Real-Evals

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  api.py  docker-compose.yml  pyproject.toml
.githooks/: post-merge  pre-commit
db/: schema.sql
dtos/requests/: __init__.py  answer.py  chunking.py  embedding.py  evaluate.py  pages.py  retrieval.py
dtos/responses/: __init__.py  answer.py  chunk.py  evaluate.py  process.py  retrieval.py  storage.py
evals/: chunking_strategies_eval.py  embedding_eval.py  fixed_size_chunking_eval.py
evals/data/: sample.txt
evals/results/: chunking_strategies.json  embedding.json  fixed_size_chunking.json
services/: answering.py  doc_type.py  evaluation.py  file_processing.py  pdf_extraction.py  retrieval.py
services/chunking/: __init__.py  base.py  coherence.py  fixed_size.py  semantic.py  sentences.py
services/embedding/: __init__.py  base.py  ollama_embedder.py  sentence_transformer.py
services/generation/: __init__.py  base.py  ollama_client.py
services/storage/: __init__.py  postgres.py
tests/: conftest.py  test_answering.py  test_api.py  test_chunk.py  test_chunking_request.py  test_coherence.py  test_doc_type.py  test_evaluation.py  test_file_processing.py  test_fixed_size_chunker.py  test_ollama_client.py  test_ollama_embedder.py  test_page_exclusion.py  test_pdf_extraction.py  test_postgres_storage.py  test_retrieval.py  test_semantic_chunker.py  test_sentence_transformer_embedder.py
