[project]
name = "rag-assistant"
version = "0.1.0"
description = "RAG assistant built with an evaluation-driven approach"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "ollama>=0.6.2",
    "pandas>=3.0.5",
    "pgvector>=0.5.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.3.0",
    "pandas-stubs>=3.0.3.260530",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true

[[tool.mypy.overrides]]
# PyMuPDF does not ship type information.
module = ["pymupdf", "pymupdf.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: needs a live PostgreSQL/pgvector database (deselect with -m 'not integration')",
]
